2007-05-21  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc, Http.h: (_Read) new private method to use in LogErrorText
	  (fixed incorrect resetting of retries).

2007-05-15  Alexander V. Lukyanov <lav@yars.free.net>

	* FileAccess.h: use static_cast (as we use -fno-rtti).
	* NetAccess.cc, NetAccess.h: use Ref; split off RateLimit.
	* RateLimit.h: new file.
	* Fish.cc, SFtp.cc: change for Refs in NetAccess.
	* Http.cc, Http.h: use Ref.
	* ProcWait.h: make dtor public.
	* Resolver.cc, Resolver.h, buffer_ssl.cc, buffer_ssl.h, ftpclass.cc,
	  ftpclass.h: use Ref.

2007-04-27  Alexander V. Lukyanov <lav@yars.free.net>

	* FileAccess.cc, FileAccess.h: more inlines; make dtor public.
	* StatusLine.h: make dtor public.
	* SMTask.h: make SMTaskRef inherit from Ref.

2007-04-25  Alexander V. Lukyanov <lav@yars.free.net>

	* CmdExec.cc: use explicit borrow().
	* Fish.cc, Fish.h, SFtp.cc, SFtp.h: use Refs.
	* Ref.h: declare Ref::null; deny assignment from other Ref.
	* HttpDir.cc: use Ref::null.
	* buffer.h: optimize ctors.

2007-04-21  Alexander V. Lukyanov <lav@yars.free.net>

	* CatJob.cc: use new FileCopyPeerFA::New.
	* CmdExec.cc, CmdExec.h: use Ref for saved_session.
	* ConnectionSlot.cc, ConnectionSlot.h: add const.
	* DirColors.cc, DirColors.h: pass const Ref&.
	* DummyProto.cc: use new DirList ctor.
	* FileAccess.cc, FileAccess.h: use Refs; (FileAccessRef::null) new
	  const;
	* FileCopy.cc, FileCopy.h, FileCopyFtp.cc, FileCopyFtp.h: use Refs;
	  const; Cast method.
	* FileGlob.cc, FileGlob.h, Filter.cc, Filter.h: use Refs.
	* FileSet.cc, FileSet.h: use consts.
	* FindJob.cc, FindJob.h, Fish.cc, Fish.h, FtpDirList.cc, FtpDirList.h,
	  GetFileInfo.cc, GetFileInfo.h, GetJob.cc GetJob.h, HttpDir.cc,
	  OutputJob.cc, OutputJob.h, SFtp.cc, SFtp.h, SleepJob.cc, SleepJob.h,
	  buffer.cc, buffer.h, commands.cc, mkdirJob.cc, mkdirJob.h: use Refs.
	* Http.cc, ftpclass.cc: change order of args to *DirList.
	* ftpclass.h, history.cc, history.h: add const.