@@ -53,7 +53,7 @@ static const char *FtpProxyValidate(xstring_c *p)
    }
    if(url.user && !url.pass)
    {
-      url.pass=(char*)GetPass(_("ftp:proxy password: "));
+      url.pass.set(GetPass(_("ftp:proxy password: ")));
       p->set_allocated(url.Combine());
    }
    return 0;
