@@ -1,3 +1,11 @@
+2007-05-22  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* ftpclass.cc, ftpclass.h: use Ref for expect.
+	* xmalloc.cc, xmalloc.h: 3-arg xstrset - new function.
+	* xstring.h: (xstring_c::nset) new method.
+	* FileAccess.cc, FileCopy.cc, FindJob.cc, HttpDirXML.cc, MirrorJob.cc,
+	  commands.cc, misc.cc, resource.cc, url.cc, url.h: use xstring in ParsedURL.
+
 2007-05-21  Alexander V. Lukyanov <lav@yars.free.net>
 
 	* Http.cc, Http.h: (_Read) new private method to use in LogErrorText
